styles changes for the new version

--- a/agent-atom/src/index.css
+++ b/agent-atom/src/index.css
@@ -1,6 +1,11 @@
-html,body{
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Louis Vuitton Web", "Louis Vuitton Web Fallback", "Helvetica Neue", "Helvetica", Arial, sans-serif;
+}
+
+html,body{
   width: 100%;
   height: 100%;
 }
